--- a/03 - CSS/flexbox/layout2.html
+++ b/03 - CSS/flexbox/layout2.html
@@ -66,14 +66,28 @@
         flex-basis: 500px;
         background-color: lightgoldenrodyellow;
       }
-      .flex-container8 .div3{
+      .flex-container8 .div3 {
         flex-shrink: 2;
       }
-      .flex-container8{
+      .flex-container8 {
         flex-direction: row;
         justify-content: center;
         align-items: center;
         gap: 10px;
+      }
+      .flex-container9 div {
+        background-color: lightgreen;
+      }
+      .flex-container9 .div2 {
+        order: 2;
+        align-self: center;
+      }
+      .flex-container9 .div3 {
+        order: -1;
+        align-self: flex-end;
+      }
+      .flex-container9 .div1{
+        align-self: flex-start;
       }
     </style>
   </head>
