--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -1,66 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Curriculo</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Curriculo</title>
+		<link rel="stylesheet" href="style2.css" />
+	</head>
 
-  <body>
-    <h1>Leonardo Caparica</h1>
-    <h3 class="funcao">Programador Back-end</h3>
+	<body>
+		<header>
+			<div class="cabecalho">
+				<img
+					src="/curriculo/assets/foto.jpg"
+					alt="Foto de perfil"
+					class="foto-perfil"
+				/>
+				<div class="info-pessoal">
+					<h1>Leonardo Caparica</h1>
+					<h3 class="funcao">Programador Back-end</h3>
+				</div>
+			</div>
+			<div class="contato">
+				<ul>
+					<li>Telefone: (41) 98813-9498</li>
+					<li>
+						Email:
+						<a href="mailto:leobcalmeida@gmail.com"
+							>leobcalmeida@gmail.com</a
+						>
+					</li>
+					<li>
+						<img
+							class="linkedin-icon"
+							src="/curriculo/assets/linkedin.png"
+							alt="linkedin icon"
+							href="https://www.linkedin.com/in/leonardo-caparica-216217284/"
+						/>
+						<a
+							href="https://www.linkedin.com/in/leonardo-caparica-216217284/"
+							>Leonardo Caparica</a
+						>
+					</li>
+				</ul>
+			</div>
+		</header>
 
-    <hr />
+		<main>
+			<div class="objetivo">
+				<h2>Objetivo</h2>
+				<p>
+					Estudante de Ciência da Computação em busca de uma
+					oportunidade de estágio para aprimorar habilidades na área
+					de desenvolvimento com foco em
+					<a class="ferramentas">PHP/Laravel</a>. Tenho interesse em
+					contribuir para projetos de diferentes portes, enquanto
+					evoluo profissionalmente ao lado de equipes experientes e
+					colaborativas.
+				</p>
+			</div>
 
-    <ul>
-      <li>Telefone : (41)98813-9498</li>
-      <li>
-        Email:
-        <a href="mailto:leobcalmeida@gmail.com">leobcalmeida@gmail.com</a>
-      </li>
-      <li>
-        LinkedIn:
-        <a href="https://www.linkedin.com/in/leonardo-caparica-216217284/"
-          >Leonardo Caparica</a
-        >
-      </li>
-    </ul>
+			<div class="container">
+				<h2>Formação</h2>
+				<h4>
+					2023 - 2027 | Universidade Estadual do Centro-Oeste
+					(UNICENTRO)
+				</h4>
+				<p>Ciência da Computação</p>
+			</div>
 
-    <hr />
+			<h2 class="experiencias">Experiências</h2>
 
-    <h2>Objetivo</h2>
-    <p>
-      Estudante de Ciência da Computação, em busca de uma oportunidade de
-      estágio para desenvolver habilidades na área de desenvolvimento em
-      <a class="ferramentas">Java</a>. <br />
-      Desejo contribuir com projetos de pequeno a grande porte, enquanto aprendo
-      e colaboro com profissionais experientes para crescer na carreira.
-    </p>
-
-    <hr />
-
-    <h2>Formação</h2>
-    <h4>2023 - 2027 | Universidade Estadual do Centro-Oeste (UNICENTRO)</h4>
-    <p>Ciência da Computação</p>
-
-    <hr />
-
-    <h2>Experiencias</h2>
-    <h3>MAI 2024 - AGO 2024 | Monitoria</h3>
-    <h4>Monitor de Programação</h4>
-    <p>
-      Monitoria para resolução de exercícios e solução de duvidas relacionada à
-      matéria de “Algoritmos e Programação de computadores I”.
-    </p>
-
-    <hr />
-
-    <h3>2024 - atual | EXTENSÃO FABSOFT</h3>
-    <h4>Aluno Extensionista</h4>
-    <p>
-      Criação e aprendizado de Desenvolvimento Web utilizando ferramentas como
-      <a class="ferramentas">“Docker”, “Git e Github”, “Laravel”</a> e entre
-      outros.
-    </p>
-  </body>
+			<div class="container">
+				<h3>2024 - Atual | EXTENSÃO FABSOFT</h3>
+				<h4>Aluno Extensionista</h4>
+				<p>
+					Criação e aprendizado de Desenvolvimento Web utilizando
+					ferramentas como
+					<a class="ferramentas">Docker, Git e Github, Laravel</a>
+					e entre outros.
+				</p>
+			</div>
+			<div class="container">
+				<h3>
+					MAR 2025 - Atual | Estágio no Centro Universitário
+					UniGuairacá
+				</h3>
+				<h4>Estágiario MultiMidia</h4>
+				<p>
+					Estágiario da MultiMidia responsavel pela manutenção e
+					implantação de material tecnológico dentro da instituição
+				</p>
+			</div>
+			<div class="container">
+				<h3>MAI 2024 - AGO 2024 | Monitoria</h3>
+				<h4>Monitor de Programação</h4>
+				<p>
+					Monitoria para resolução de exercícios e solução de dúvidas
+					relacionadas à matéria de “Algoritmos e Programação de
+					Computadores I”.
+				</p>
+			</div>
+		</main>
+	</body>
 </html>
