--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -16,7 +16,7 @@
 				/>
 				<div class="info-pessoal">
 					<h1>Leonardo Caparica</h1>
-					<h3 class="funcao">Programador Back-end</h3>
+					<h3>Programador Back-end</h3>
 				</div>
 			</div>
 			<div class="contato">
@@ -67,7 +67,7 @@
 				<p>Ciência da Computação</p>
 			</div>
 
-			<h2 class="experiencias">Experiências</h2>
+			<h1 class="experiencias">Experiências</h1>
 
 			<div class="container">
 				<h3>2024 - Atual | EXTENSÃO FABSOFT</h3>
