--- a/Trabalho1/index.html
+++ b/Trabalho1/index.html
@@ -5,14 +5,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Trabalho 1</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
 			<nav>
 				<div>
+					<p>logo da marca</p>
 					<img src="" alt="logoMarca" />
 				</div>
-				<ul>
+				<ul class="nav-buttons">
 					<li><a href="#">About</a></li>
 					<li><a href="#">Discover</a></li>
 					<li><a href="#">Get Started</a></li>
@@ -20,7 +22,7 @@
 			</nav>
 		</header>
 		<main>
-			<div>
+			<div class="container">
 				<h1>Mastercraft Bamboo Monitor Riser</h1>
 				<p>
 					A beautiful & handcrafted monitor stand to reduce neck and
@@ -32,7 +34,7 @@
 				</div>
 			</div>
 
-			<div>
+			<div class="card card1">
 				<div>
 					<h1>$89914</h1>
 					<p>of $100000 backed</p>
@@ -49,7 +51,7 @@
 				<!--Falta a linha verde-->
 			</div>
 
-			<div>
+			<div class="container">
 				<h1>About this project</h1>
 				<p>
 					The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
@@ -65,7 +67,7 @@
 					notepads, pens, and USB sticks to be stored under the stand.
 				</p>
 
-				<div>
+				<div class="container card">
 					<ul>
 						<li><h1>Bamboo stand</h1></li>
 						<li><p>Pledge $25 or more</p></li>
@@ -88,7 +90,7 @@
 					</ul>
 				</div>
 
-				<div>
+				<div class="container card">
 					<ul>
 						<li><h1>Black Edition Stand</h1></li>
 						<li><p>Pledge $75 or more</p></li>
@@ -111,7 +113,7 @@
 					</ul>
 				</div>
 
-				<div>
+				<div class="container card">
 					<ul>
 						<li><h1>Mahogany Special Edition</h1></li>
 						<li><p>Pledge $25 or more</p></li>
