--- a/Trabalho1/index.html
+++ b/Trabalho1/index.html
@@ -5,7 +5,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Trabalho 1</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header>
