--- a/03 - CSS/formulario/forms_entrada.html
+++ b/03 - CSS/formulario/forms_entrada.html
@@ -5,11 +5,8 @@
 		<title>Formulário</title>
 		<style>
 			input {
-				display: block;
-				margin-bottom: 10px;
-			}
-			.comorbidade {
 				display: inline-block;
+				margin-bottom: 10px;
 			}
 		</style>
 	</head>
@@ -53,7 +50,7 @@
 			</fieldset>
 			<fieldset>
 				<legend>Selecione</legend>
-				<select name="linguagem" for="selecLang">
+				<select name="linguagem" id="selecLang">
 					<optgroup label="Front">
 						<option value="html">HTML</option>
 						<option value="css">CSS</option>
@@ -65,6 +62,34 @@
 					</optgroup>
 				</select>
 			</fieldset>
+			<fieldset>
+				<legend>Linguagem</legend>
+				<input type="text" list="langList" />
+				<datalist id="langList">
+					<option value="html">HTML</option>
+					<option value="css">CSS</option>
+					<option value="js">JavaScript</option>
+					<option value="laravel">Laravel</option>
+					<option value="express">Express</option>
+				</datalist>
+			</fieldset>
+			<fieldset>
+				<legend>Deixe aqui a sua mensagem</legend>
+				<textarea name="msg" cols="100" rows="10"></textarea>
+			</fieldset>
+			<fieldset>
+				<textarea name="msg" cols="100" rows="10" disabled>
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit quasi amet sit placeat illum, facere rerum tempore corrupti, eius cupiditate nam voluptas accusantium sequi, sed voluptatem vitae aliquid a in repellendus tempora magnam? Debitis fugit quo blanditiis, soluta asperiores saepe dignissimos impedit corporis. Mollitia officia aliquid nihil cum in laudantium, eaque corrupti cumque doloribus obcaecati ex autem est? Pariatur impedit qui tempora totam quos sapiente dignissimos distinctio dolore libero tempore eum officia laboriosam aspernatur ratione animi quisquam aliquam, voluptatibus quam aliquid explicabo consequuntur voluptatem facere! Quia fugiat sint quaerat nihil corrupti qui reiciendis voluptate ratione eos vitae debitis nobis atque vero itaque hic, velit nostrum asperiores commodi deserunt. Reiciendis saepe, quos quas necessitatibus mollitia eos! Reiciendis fugit accusamus recusandae voluptatem hic distinctio nam ab vero quaerat molestias! Aliquam cupiditate porro est doloribus tempore vero provident inventore placeat. Magnam, cum. Eum perferendis sapiente, iusto ut quaerat, accusamus corrupti exercitationem repellat veritatis, totam ad nam consequuntur recusandae in non similique architecto sed quasi itaque beatae asperiores? Vel reprehenderit voluptatibus blanditiis quae nisi eveniet numquam voluptatum harum explicabo quia minima eligendi libero quibusdam suscipit nemo excepturi pariatur hic sapiente deleniti cupiditate, fugit ducimus. Amet magni necessitatibus explicabo pariatur, temporibus at minus optio, tempore praesentium dolor ducimus, perspiciatis aspernatur asperiores totam hic sunt nesciunt autem quibusdam omnis inventore porro ipsa corporis! Quis, quisquam? Corrupti corporis eaque aliquid reiciendis laudantium, nulla, quaerat, voluptatum praesentium quos esse asperiores dolores libero itaque. Omnis deleniti iusto officia similique cupiditate ipsum aperiam at libero minima sed, dolores earum, maxime debitis sapiente aliquam voluptatibus perferendis sunt porro perspiciatis. Molestias aspernatur impedit inventore enim, pariatur consequatur voluptatibus nisi! Eveniet, odio, delectus fuga voluptatibus nihil reiciendis omnis ex nisi atque blanditiis quae, quas dolore repellat mollitia obcaecati aliquid ab eos veniam aspernatur voluptas ratione at cumque. Enim repellendus animi quo eum ullam, assumenda magnam a et illum error maxime omnis hic! Nam sapiente quo rem eius odio iste tenetur distinctio exercitationem ratione? Vel pariatur excepturi accusamus similique, corrupti iure neque sequi a deserunt quas illum eveniet, culpa totam est in, unde exercitationem reiciendis! Laboriosam, quae quis, sed maiores quidem id consequatur eius, exercitationem velit maxime molestias! At veniam impedit mollitia atque officia! Error numquam consectetur autem rerum distinctio vero laborum iure deleniti rem reprehenderit magnam nemo ipsa harum recusandae quibusdam dolorem nostrum voluptatem, fugiat, temporibus quod velit! Modi laborum possimus ullam qui accusantium magni necessitatibus dicta tempora harum, cum vel culpa at voluptatum, tenetur non nulla? Sint eligendi magnam molestiae architecto error iusto odit, cumque, explicabo facilis blanditiis consequuntur obcaecati nesciunt autem nostrum quae maxime alias, quibusdam nisi nulla possimus omnis! Dolores modi rerum exercitationem assumenda dolorem eveniet ratione adipisci ullam, saepe eligendi repellat earum iusto inventore animi veritatis, similique cupiditate odio voluptatum doloremque natus rem fugiat! Blanditiis eum expedita magnam natus laboriosam quo quis reprehenderit, amet vero sit aliquam architecto, ratione temporibus earum cumque eligendi perspiciatis quos? Illum nostrum inventore maxime fuga, perspiciatis facilis repellat cum. Ut, nihil? Saepe nostrum laboriosam odit maiores sequi mollitia iusto explicabo unde et perferendis libero dolores quis nesciunt blanditiis doloribus, vero exercitationem praesentium, facilis corporis error eius. Totam dolores debitis natus alias soluta officiis nostrum libero odio, sunt dolorem consequuntur expedita iusto reprehenderit? Veniam, distinctio id nobis corrupti officiis accusamus nulla tempora cupiditate laboriosam neque deleniti? Non modi animi excepturi rerum porro natus deleniti, blanditiis quod! A tempora omnis exercitationem illum officiis repudiandae nihil eius aut iste eos doloribus officia esse facere molestias obcaecati deleniti vel et, assumenda saepe quae at earum iusto! Corporis, labore? Molestias sed quia quod reprehenderit aliquam sint aut officiis quisquam veniam cupiditate magni facere, inventore odit odio ratione iure repellendus optio, harum iusto? Placeat veniam maxime quaerat fuga repellendus! Ut architecto suscipit maiores nisi quia harum optio hic laudantium non. Vero distinctio repellat neque est aliquid, delectus expedita esse ea saepe perferendis adipisci vitae odit dicta incidunt sint reprehenderit earum, ducimus, nulla fugit amet id? Voluptatibus delectus corrupti soluta cumque, est debitis nisi maiores animi quam. Soluta quia sequi enim eos nobis pariatur facere consequuntur veritatis, odio rem earum consequatur eligendi molestiae magnam fugit hic minima eaque! Esse aliquid cupiditate culpa porro placeat sed cumque magni incidunt iusto dignissimos molestias tempore similique delectus fugiat sit sint quod ipsa, est saepe nesciunt voluptatem nemo excepturi. Dicta, neque sed ex perspiciatis magnam veritatis maxime, deleniti, iusto aut asperiores facere! Recusandae a ipsam ducimus magnam cumque quasi ab rerum autem doloribus obcaecati facere repellendus molestias, veniam deserunt pariatur fuga hic nobis. Exercitationem fuga temporibus eaque at quis sequi, dolorem laboriosam. Qui, nesciunt. Ratione asperiores quisquam excepturi! Nulla, ab non numquam consequuntur quia magnam commodi? Perspiciatis, velit cumque, repellendus minima placeat aspernatur maiores ut fugit sapiente assumenda molestiae. Ipsa earum laudantium cumque! Aliquam et alias neque excepturi dolorum numquam blanditiis sint quidem! Illum eligendi voluptatem expedita eaque iure quidem quia distinctio sed suscipit, non ipsum alias quasi mollitia nam rem numquam temporibus incidunt iste eius ratione quas ipsa culpa atque? Culpa suscipit sint blanditiis eligendi. Perferendis voluptatum ab distinctio quae magni. Animi eum aperiam laudantium exercitationem voluptate. Delectus a voluptatum eum non quas dolorum! Dignissimos maiores excepturi earum fugiat sed. Quis rerum dolor nihil minima voluptatum, aliquid corrupti. Asperiores odit officiis dolore nam, veritatis excepturi! Expedita dolore ipsam obcaecati, atque, architecto doloribus recusandae quam quibusdam animi aut ad est aperiam nulla magni. Debitis quas nobis voluptas voluptatem ipsam iste quia magni provident itaque ullam, dolorem magnam, repellat corrupti expedita iusto placeat possimus nulla amet. Ipsam adipisci magnam totam et consectetur doloribus natus iure quidem, nemo dolorum optio beatae, eaque officiis, eos veritatis soluta minus nostrum nulla veniam consequatur dicta corrupti molestiae. Est fugiat incidunt inventore, blanditiis quae placeat temporibus perferendis quo suscipit animi dicta ipsa voluptas, explicabo commodi? Illo dolorum, rerum fuga quisquam unde suscipit voluptates officiis iusto consequuntur! Placeat aliquam consequatur quod voluptatum veniam nihil accusantium vitae ex, dolorem dignissimos, corrupti sint, officiis laborum a. Labore, adipisci aspernatur provident vel neque quo accusamus facilis rerum, ducimus quae distinctio quidem qui dicta. Harum, hic soluta at reprehenderit quia quam officia eligendi quasi maxime ullam?</textarea
+				>
+				<label><input type="checkbox" />Li e aceito</label>
+			</fieldset>
+			<input type="file" /><br />
+			<input type="search" /><br />
+			<input type="hidden" value="valor_escondido" />
+			<input type="button" value="ok" />
+			<button>ok</button>
+			<input type="range" min="0" max="10" />
+			<input type="color" />
 			<input type="submit" value="enviar" />
 		</form>
 	</body>
