--- a/Trabalho1/index.html
+++ b/Trabalho1/index.html
@@ -1,63 +1,54 @@
 <!DOCTYPE html>
-
-<!--Link da página original https://arthurgc.github.io/Mastercraft_Bamboo_Monitor_Website/#about-->
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<title>Trabalho 1</title>
-		<link rel="stylesheet" href="style.css" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-			rel="stylesheet"
-		/>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<div>
-					<p>logo da marca</p>
-					<img src="" alt="logoMarca" />
-				</div>
-				<ul class="nav-buttons">
-					<li><a href="#">About</a></li>
-					<li><a href="#">Discover</a></li>
-					<li><a href="#">Get Started</a></li>
+		<nav>
+			<div class="navbar__logo">
+				<img src="" alt="Logo crowdfund" />
+			</div>
+			<div class="navbar__menu">
+				<ul>
+					<li><a href="">About</a></li>
+					<li><a href="">Discover</a></li>
+					<li><a href="">Get Started</a></li>
 				</ul>
-			</nav>
-		</header>
+			</div>
+		</nav>
 		<main>
-			<div class="container">
-				<h1>Mastercraft Bamboo Monitor Riser</h1>
+			<div class="card card__1">
+				<h1 class="card__title">Mastercraft Bamboo Monitor Riser</h1>
 				<p>
 					A beautiful & handcrafted monitor stand to reduce neck and
 					eye strain.
 				</p>
-				<div>
-					<a href="#">Back this project</a>
-					<a href="#"><img src="" alt="botao de salvar" /></a>
+				<div class="card__btns">
+					<button class="card__btn">Back to this project</button>
+					<img src="" alt="icon bookmark" />
 				</div>
 			</div>
-
-			<div class="card card1">
-				<div>
-					<h1>$89914</h1>
-					<p>of $100000 backed</p>
+			<div class="card card__2">
+				<div class="card__section--flex">
+					<div>
+						<h2>$89914</h2>
+						<p>of $100000 backed</p>
+					</div>
+					<div>
+						<h2>5007</h2>
+						<p>total backers</p>
+					</div>
+					<div>
+						<h2>56</h2>
+						<p>days left</p>
+					</div>
 				</div>
-				<div>
-					<h1>5007</h1>
-					<p>total backers</p>
-				</div>
-				<div>
-					<h1>56</h1>
-					<p>days left</p>
-				</div>
-
-				<!--Falta a linha verde-->
+				<div class="card__bar"></div>
 			</div>
-
-			<div class="container">
-				<h1>About this project</h1>
-				<p>
+			<div class="card card__3">
+				<h2 id="about" class="card__title">About this project</h2>
+				<p class="card__dsc">
 					The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
 					platform that elevates your screen to a more comfortable
 					viewing height. Placing your monitor at eye level has the
@@ -65,79 +56,67 @@
 					comfortable while at work, helping you stay focused on the
 					task at hand.
 				</p>
-				<p>
-					Featuring artisan craftsmanship, the simplicity of design
-					creates extra desk space below your computer to allow
-					notepads, pens, and USB sticks to be stored under the stand.
-				</p>
+				<p class="card__dsc--2"></p>
 
-				<div class="container card">
-					<ul>
-						<li><h1>Bamboo stand</h1></li>
-						<li><p>Pledge $25 or more</p></li>
-					</ul>
-					<p>
+				<div class="card__stand">
+					<div class="card__stand__header">
+						<h3>Bamboo stand</h3>
+						<p>Pledge $25 or more</p>
+					</div>
+					<div class="card__stand__dsc--text">
 						You get an ergonomic stand made of natural bamboo.
 						You've helped us launch our promotional campaign, and
-						you'll be added to a special Backer member list.
-					</p>
-					<ul>
-						<li>
-							<div>
-								<h1>101</h1>
-								<p>left</p>
-							</div>
-						</li>
-						<li>
-							<a href="">Select Reward</a>
-						</li>
-					</ul>
+						you’ll be added to a special Backer member list.
+					</div>
+					<div class="card__stand__btns">
+						<div class="card__stand__btns__left">
+							<p>101</p>
+							<span>left</span>
+						</div>
+						<button id="reward-1" class="card__stand__btns__btn">
+							Select reward
+						</button>
+					</div>
 				</div>
-
-				<div class="container card">
-					<ul>
-						<li><h1>Black Edition Stand</h1></li>
-						<li><p>Pledge $75 or more</p></li>
-					</ul>
-					<p>
+				<div class="card__stand">
+					<div class="card__stand__header">
+						<h3>Black Edition Stand</h3>
+						<p>Pledge $75 or more</p>
+					</div>
+					<div class="card__stand__dsc--text">
 						You get a Black Special Edition computer stand and a
-						personal thank you. You'll be added to our Backer member
+						personal thank you. You’ll be added to our Backer member
 						list. Shipping is included.
-					</p>
-					<ul>
-						<li>
-							<div>
-								<h1>64</h1>
-								<p>left</p>
-							</div>
-						</li>
-						<li>
-							<a href="">Select Reward</a>
-						</li>
-					</ul>
+					</div>
+					<div class="card__stand__btns">
+						<div class="card__stand__btns__left">
+							<p>63</p>
+							<span>left</span>
+						</div>
+						<button id="reward-1" class="card__stand__btns__btn">
+							Select reward
+						</button>
+					</div>
 				</div>
-
-				<div class="container card">
-					<ul>
-						<li><h1>Mahogany Special Edition</h1></li>
-						<li><p>Pledge $25 or more</p></li>
-					</ul>
-					<p>
+				<div class="card__stand card__stand--last">
+					<div class="card__stand__header">
+						<h3>Mahogany Special Edition</h3>
+						<p>Pledge $25 or more</p>
+					</div>
+					<div class="card__stand__dsc--text">
 						You get two Special Edition Mahogany stands, a Backer
-						T-Shirt, and a personal thank you. You'll be added to
+						T-Shirt, and a personal thank you. You’ll be added to
 						our Backer member list. Shipping is included.
-					</p>
-					<ul>
-						<li>
-							<div>
-								<h1>0</h1>
-								<p>left</p>
-							</div>
-						</li>
-						<li>
-							<a href="">Out of Stock</a>
-						</li>
-					</ul>
+					</div>
+					<div class="card__stand__btns">
+						<div class="card__stand__btns__left">
+							<p>0</p>
+							<span>left</span>
+						</div>
+						<button id="reward-1" class="card__stand__btns__btn">
+							Select reward
+						</button>
+					</div>
 				</div>
 			</div>
 		</main>
