--- a/Trabalho1/index.html
+++ b/Trabalho1/index.html
@@ -2,41 +2,53 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Trabalho 1</title>
+		<link rel="stylesheet" href="style.css" />
+		<title>Mastercraft Bamboo Monitor Riser</title>
 	</head>
 	<body>
-		<nav>
-			<div class="navbar__logo">
-				<img src="" alt="Logo crowdfund" />
-			</div>
-			<div class="navbar__menu">
-				<ul>
-					<li><a href="">About</a></li>
-					<li><a href="">Discover</a></li>
-					<li><a href="">Get Started</a></li>
-				</ul>
-			</div>
-		</nav>
+		<header>
+			<nav>
+				<div class="navbar__logo">
+					<img src="imagens/logo.svg" alt="Logo crowdfund" />
+				</div>
+				<div class="navbar__menu">
+					<ul>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Discover</a></li>
+						<li><a href="#">Get Started</a></li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+
 		<main>
 			<div class="card card__1">
+				<img
+					src="imagens/logo-mastercraft.svg"
+					alt="Mastercraft Logo"
+					class="card__logo"
+				/>
 				<h1 class="card__title">Mastercraft Bamboo Monitor Riser</h1>
-				<p>
+				<p class="card__subtitle">
 					A beautiful & handcrafted monitor stand to reduce neck and
 					eye strain.
 				</p>
 				<div class="card__btns">
-					<button class="card__btn">Back to this project</button>
-					<img src="" alt="icon bookmark" />
+					<button class="card__btn">Back this project</button>
+					<button class="bookmark-btn">
+						<img src="imagens/icone-bookmark.svg" alt="Bookmark" />
+					</button>
 				</div>
 			</div>
+
 			<div class="card card__2">
 				<div class="card__section--flex">
 					<div>
-						<h2>$89914</h2>
-						<p>of $100000 backed</p>
+						<h2>$89,914</h2>
+						<p>of $100,000 backed</p>
 					</div>
 					<div>
-						<h2>5007</h2>
+						<h2>5,007</h2>
 						<p>total backers</p>
 					</div>
 					<div>
@@ -46,8 +58,9 @@
 				</div>
 				<div class="card__bar"></div>
 			</div>
+
 			<div class="card card__3">
-				<h2 id="about" class="card__title">About this project</h2>
+				<h2 class="card__title">About this project</h2>
 				<p class="card__dsc">
 					The Mastercraft Bamboo Monitor Riser is a sturdy and stylish
 					platform that elevates your screen to a more comfortable
@@ -56,28 +69,33 @@
 					comfortable while at work, helping you stay focused on the
 					task at hand.
 				</p>
-				<p class="card__dsc--2"></p>
+				<p class="card__dsc">
+					Featuring artisan craftsmanship, the simplicity of design
+					creates extra desk space below your computer to allow
+					notepads, pens, and USB sticks to be stored under the stand.
+				</p>
 
 				<div class="card__stand">
 					<div class="card__stand__header">
-						<h3>Bamboo stand</h3>
+						<h3>Bamboo Stand</h3>
 						<p>Pledge $25 or more</p>
 					</div>
 					<div class="card__stand__dsc--text">
 						You get an ergonomic stand made of natural bamboo.
 						You've helped us launch our promotional campaign, and
-						you’ll be added to a special Backer member list.
+						you'll be added to a special Backer member list.
 					</div>
 					<div class="card__stand__btns">
 						<div class="card__stand__btns__left">
 							<p>101</p>
 							<span>left</span>
 						</div>
-						<button id="reward-1" class="card__stand__btns__btn">
-							Select reward
+						<button class="card__stand__btns__btn">
+							Select Reward
 						</button>
 					</div>
 				</div>
+
 				<div class="card__stand">
 					<div class="card__stand__header">
 						<h3>Black Edition Stand</h3>
@@ -85,27 +103,28 @@
 					</div>
 					<div class="card__stand__dsc--text">
 						You get a Black Special Edition computer stand and a
-						personal thank you. You’ll be added to our Backer member
+						personal thank you. You'll be added to our Backer member
 						list. Shipping is included.
 					</div>
 					<div class="card__stand__btns">
 						<div class="card__stand__btns__left">
-							<p>63</p>
+							<p>64</p>
 							<span>left</span>
 						</div>
-						<button id="reward-1" class="card__stand__btns__btn">
-							Select reward
+						<button class="card__stand__btns__btn">
+							Select Reward
 						</button>
 					</div>
 				</div>
+
 				<div class="card__stand card__stand--last">
 					<div class="card__stand__header">
 						<h3>Mahogany Special Edition</h3>
-						<p>Pledge $25 or more</p>
+						<p>Pledge $200 or more</p>
 					</div>
 					<div class="card__stand__dsc--text">
 						You get two Special Edition Mahogany stands, a Backer
-						T-Shirt, and a personal thank you. You’ll be added to
+						T-Shirt, and a personal thank you. You'll be added to
 						our Backer member list. Shipping is included.
 					</div>
 					<div class="card__stand__btns">
@@ -113,8 +132,8 @@
 							<p>0</p>
 							<span>left</span>
 						</div>
-						<button id="reward-1" class="card__stand__btns__btn">
-							Select reward
+						<button class="card__stand__btns__btn" disabled>
+							Out of stock
 						</button>
 					</div>
 				</div>
