--- a/Trabalho1/index.html
+++ b/Trabalho1/index.html
@@ -9,7 +9,7 @@
 		<header>
 			<nav>
 				<div class="navbar__logo">
-					<img src="imagens/logo.svg" alt="Logo crowdfund" />
+					<img src="assets/logo.svg" alt="Logo crowdfund" />
 				</div>
 				<div class="navbar__menu">
 					<ul>
@@ -24,7 +24,7 @@
 		<main>
 			<div class="card card__1">
 				<img
-					src="imagens/logo-mastercraft.svg"
+					src="assets/logo-mastercraft.svg"
 					alt="Mastercraft Logo"
 					class="card__logo"
 				/>
@@ -36,7 +36,7 @@
 				<div class="card__btns">
 					<button class="card__btn">Back this project</button>
 					<button class="bookmark-btn">
-						<img src="imagens/icone-bookmark.svg" alt="Bookmark" />
+						<img src="assets/icone-bookmark.svg" alt="Bookmark" />
 					</button>
 				</div>
 			</div>
