--- a/04 - JS/intro/exemplo2.html
+++ b/04 - JS/intro/exemplo2.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Primeiro Exemplo</title>
-        <script src="exemplo01.js"></script>
+		<title>Segundo Exemplo</title>
+		<script>
+			let nome = prompt("Qual é o seu nome?");
+			alert("Olá, " + nome);
+		</script>
 	</head>
 	<body>
-		<h1>Primeiro Exemplo</h1>
-		<script>
-			alert("Hello World!");
-		</script>
-	</body>
+        <h1>Variaveis</h1>
+    </body>
 </html>
