--- a/curriculo/index.html
+++ b/curriculo/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Curriculo</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Currículo</title>
 		<link rel="stylesheet" href="style2.css" />
 	</head>
 
@@ -19,6 +20,7 @@
 					<h3>Programador Back-end</h3>
 				</div>
 			</div>
+
 			<div class="contato">
 				<ul>
 					<li>Telefone: (41) 98813-9498</li>
@@ -33,7 +35,6 @@
 							class="linkedin-icon"
 							src="/curriculo/assets/linkedin.png"
 							alt="linkedin icon"
-							href="https://www.linkedin.com/in/leonardo-caparica-216217284/"
 						/>
 						<a
 							href="https://www.linkedin.com/in/leonardo-caparica-216217284/"
@@ -58,7 +59,7 @@
 				</p>
 			</div>
 
-			<div class="container">
+			<div class="formacao container">
 				<h2>Formação</h2>
 				<h4>
 					2023 - 2027 | Universidade Estadual do Centro-Oeste
@@ -69,35 +70,38 @@
 
 			<h1 class="experiencias">Experiências</h1>
 
-			<div class="container">
-				<h3>2024 - Atual | EXTENSÃO FABSOFT</h3>
-				<h4>Aluno Extensionista</h4>
-				<p>
-					Criação e aprendizado de Desenvolvimento Web utilizando
-					ferramentas como
-					<a class="ferramentas">Docker, Git e Github, Laravel</a>
-					e entre outros.
-				</p>
-			</div>
-			<div class="container">
-				<h3>
-					MAR 2025 - Atual | Estágio no Centro Universitário
-					UniGuairacá
-				</h3>
-				<h4>Estágiario MultiMidia</h4>
-				<p>
-					Estágiario da MultiMidia responsavel pela manutenção e
-					implantação de material tecnológico dentro da instituição
-				</p>
-			</div>
-			<div class="container">
-				<h3>MAI 2024 - AGO 2024 | Monitoria</h3>
-				<h4>Monitor de Programação</h4>
-				<p>
-					Monitoria para resolução de exercícios e solução de dúvidas
-					relacionadas à matéria de “Algoritmos e Programação de
-					Computadores I”.
-				</p>
+			<div class="experiencia-grid">
+				<div class="container">
+					<h3>2024 - Atual | EXTENSÃO FABSOFT</h3>
+					<h4>Aluno Extensionista</h4>
+					<p>
+						Criação e aprendizado de Desenvolvimento Web utilizando
+						ferramentas como
+						<a class="ferramentas">Docker, Git e Github, Laravel</a>
+						e entre outros.
+					</p>
+				</div>
+
+				<div class="container">
+					<h3>
+						MAR 2025 - MAI 2025 | Estágio no Centro Universitário
+						UniGuairacá
+					</h3>
+					<h4>Estágiario MultiMidia</h4>
+					<p>
+						Responsável pela manutenção e implantação de material
+						tecnológico dentro da instituição.
+					</p>
+				</div>
+
+				<div class="container">
+					<h3>MAI 2024 - AGO 2024 | Monitoria</h3>
+					<h4>Monitor de Programação</h4>
+					<p>
+						Monitoria para resolução de exercícios e dúvidas de
+						“Algoritmos e Programação de Computadores I”.
+					</p>
+				</div>
 			</div>
 		</main>
 	</body>
